yoshimi 1.3.6 M

2015-10-11 Will
- Implemented paging (not banks yet).

2015-10-9 Will
- Changed mode return behaviour.
- Changed some command names.

2015-10-8 Will
- Fixed segfault when changing command line mode.
- Added command line history.

2015-10-7 Will
- Brought Andrew's thread and readline into older style command line.
- Further enhancements.

2015-10-6 Will (command)
- Improved readline exit behaviour.
- Added exit command.

2015-10-5 Will
- Further improvements to command line control.
- General code tidying.

2015-10-3 Will
- More improvements to command line control.
- Extended command line vector control.
- Auto generate .config/yoshimi/presets directory.

2015-10-2 Will
- Set up bugfix branch to track only the current release.
- Set version of this to 1.3.6.1

2015-10-1 Will
- First time config search was getting confused if zyn or old style
  yoshi configs were there, so they are no longer accepted.
- Added definitive search for bank dirs launch directory parent.
- Added definitive search for preset dirs in launch directory parent.
- Identifed preset bugs. Only gui updates needed now.

yoshimi 1.3.6

2015-9-28 Will
- Some code style corrections.
- Final LV2 fix.
- Documentation updates.
- Snuck in a new instrument patch.
- Set version as 1.3.6 for release.

2015-9-26 Will
- Pulled in additional command line controls.
- Pulled in Andrew's further LV2 fixes.
- Set version as 1.3.6 rc5.

2015-9-20 Andrew
- Fixed LV2 plugin buffersize setting in case of smaller
  internal buffersize.

2015-9-14 Will
- Fixed bug that let an invalid instrument be stored in a bank.
- Changed 'Parameters' to 'Patch sets'
- Set version as 1.3.6 rc4.

2015-9-13 Will
- Merged stable version from command branch.
- Set version as 1.3.6 rc3.

2015-9-10 Will (command)
- Allow buffer size down to 32 frames.

2015-9-7 Will (command)
- More extensions to command line access.
- Improved error checks.

2015-9-6 Will (command)
- Extended and improved command line access.
