@@ -86,6 +86,7 @@ class SynthEngine : private SynthHelper, MiscFuncs
         void SetProgram(unsigned char chan, unsigned short pgm);
         void SetPartChan(unsigned char npart, unsigned char nchan);
         void SetPartDestination(unsigned char npart, unsigned char dest);
+        int ListBanks(int start, int numLines, int rootNum);
         int ListInstruments(int start, int numLines, int bankNum);
         void SetSystemValue(int type, int value);
         int commandSet(char *point);
